@@ -11,7 +11,7 @@ Bug: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=910141
  1 file changed, 1 insertion(+), 1 deletion(-)
 
 diff --git a/panels/user-accounts/cc-add-user-dialog.c b/panels/user-accounts/cc-add-user-dialog.c
-index 07c1edf..0ca8122 100644
+index 0b955c17e..70f560259 100644
 --- a/panels/user-accounts/cc-add-user-dialog.c
 +++ b/panels/user-accounts/cc-add-user-dialog.c
 @@ -234,7 +234,7 @@ local_create_user (CcAddUserDialog *self)
