@@ -1,4 +1,4 @@
-From 9bf4ca663d5a1ab65bdf6490dcc9a86b4a93e19e Mon Sep 17 00:00:00 2001
+From 6fcb6fd062d213e6cfc5963c107caac267bdbf59 Mon Sep 17 00:00:00 2001
 From: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 Date: Wed, 15 Jan 2020 16:56:17 +1300
 Subject: [PATCH 08/22] Allow tweaking some settings for Ubuntu Dock
@@ -49,7 +49,7 @@ index 2f4fdc5e3..81ae0b1a7 100644
    'user-accounts'
 diff --git a/panels/ubuntu/cc-ubuntu-panel.c b/panels/ubuntu/cc-ubuntu-panel.c
 new file mode 100644
-index 000000000..77627e982
+index 000000000..3e743e448
 --- /dev/null
 +++ b/panels/ubuntu/cc-ubuntu-panel.c
 @@ -0,0 +1,373 @@
@@ -250,7 +250,7 @@ index 000000000..77627e982
 +  g_autofree gchar *gtk_theme = NULL;
 +  g_autofree gchar *cursor_theme = NULL;
 +  g_autofree gchar *icon_theme = NULL;
-+  GtkFlowBoxChild *theme_item;
++  GtkFlowBoxChild *theme_item = NULL;
 +
 +  gtk_theme = g_settings_get_string (self->interface_settings, GTK_THEME_KEY);
 +  cursor_theme = g_settings_get_string (self->interface_settings, CURSOR_THEME_KEY);
