@@ -1,4 +1,4 @@
-From f538655235262c7fe33dffbe73e93ae79e3a5be2 Mon Sep 17 00:00:00 2001
+From e4406e71b239658d6d5f6a00b3e70dc0f304d422 Mon Sep 17 00:00:00 2001
 From: Tim Lunn <tim@feathertop.org>
 Date: Mon, 3 Jun 2013 17:27:45 +1000
 Subject: [PATCH 09/22] lock: Add "Lock Screen on Suspend" option
