@@ -1,4 +1,4 @@
-From d11441fa992e098a62fd2a4bd2738603f3db93d9 Mon Sep 17 00:00:00 2001
+From 453c3538d3c9b7b8e142302543ff0622aaca6435 Mon Sep 17 00:00:00 2001
 From: Tim Lunn <tim@feathertop.org>
 Date: Fri, 11 Sep 2015 13:43:40 +1000
 Subject: [PATCH 10/22] Provide an api for the installation of language packs
