@@ -1,4 +1,4 @@
-From c75d6cf2012def19f2a31bc1326af5231a26a1b1 Mon Sep 17 00:00:00 2001
+From 63bb627fb1c371fba17e0fc9810bcc1d4e72807c Mon Sep 17 00:00:00 2001
 From: Jeremy Bicha <jbicha@ubuntu.com>
 Date: Thu, 14 Sep 2017 09:23:42 -0400
 Subject: [PATCH 11/22] region: Add Language Selector button
