@@ -1,4 +1,4 @@
-From 8aa70c2eaa2b4763aac26f56bafa9b6bf71b7052 Mon Sep 17 00:00:00 2001
+From 371652b4fe5302dcbfddb0df2c4aa307ae9832b3 Mon Sep 17 00:00:00 2001
 From: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 Date: Tue, 31 Jul 2018 04:44:12 +0100
 Subject: [PATCH 12/22] printers: Temporarily add an additional advanced
