@@ -1,4 +1,4 @@
-From 6fccdaa196a78eb5cc4db9ac46cab0c612781988 Mon Sep 17 00:00:00 2001
+From 0b6ec60f7432f2ee753a2b767857e25234f2de4b Mon Sep 17 00:00:00 2001
 From: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 Date: Tue, 31 Jul 2018 04:44:12 +0100
 Subject: [PATCH 13/22] notifications: Handle .desktop files that got renamed
