@@ -1,4 +1,4 @@
-From 09d48ddbb86186601f14d82e8cb516858bea5737 Mon Sep 17 00:00:00 2001
+From fd500d20a2302f731f387efa6290ed3530cd385f Mon Sep 17 00:00:00 2001
 From: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 Date: Mon, 19 Aug 2019 16:17:20 +0100
 Subject: [PATCH 14/22] shell: Change the default height so all category are on
