@@ -1,4 +1,4 @@
-From 350667a09b1cd8bf6d79cf7a4d3752cd063dfbb3 Mon Sep 17 00:00:00 2001
+From 9b0df485e11f9edc79d5ad0d5259999e01b22f7e Mon Sep 17 00:00:00 2001
 From: James Henstridge <james@jamesh.id.au>
 Date: Wed, 9 Aug 2017 22:30:21 +0800
 Subject: [PATCH 15/22] connectivity: add network connectivity checking toggle
