@@ -1,4 +1,4 @@
-From 51b09bcdd6835fe23e65c75436161fc48a086734 Mon Sep 17 00:00:00 2001
+From ae5d9033bdf9144e5f65202e5c9474b1546669bb Mon Sep 17 00:00:00 2001
 From: James Henstridge <james@jamesh.id.au>
 Date: Thu, 14 Sep 2017 10:58:16 +0800
 Subject: [PATCH 16/22] diagnostics: Add Whoopsie support
