@@ -1,4 +1,4 @@
-From d86eee446dcceaa03d602a045e6e97c73cde95a7 Mon Sep 17 00:00:00 2001
+From 3a0025069772d1e78bdb2157b025c22d6a34cd60 Mon Sep 17 00:00:00 2001
 From: Andrea Azzarone <andrea.azzarone@canonical.com>
 Date: Tue, 31 Jul 2018 04:44:12 +0100
 Subject: [PATCH 17/22] online-accounts: Hide window after adding an online
