@@ -1,4 +1,4 @@
-From 8e25717daeee7d7fd5131454b3799d1a6df776ef Mon Sep 17 00:00:00 2001
+From 4f79424bde7ade4fdbee0c21fdf31faf83384811 Mon Sep 17 00:00:00 2001
 From: Robert Ancell <robert.ancell@canonical.com>
 Date: Tue, 12 Mar 2019 15:31:38 +1300
 Subject: [PATCH 18/22] applications: Add hack detect snaps before
