@@ -1,4 +1,4 @@
-From 2ba9d81d11499f802449ae704c2302ef56349292 Mon Sep 17 00:00:00 2001
+From ef15406baaa9d0c79ff92d59d939e8549a5cf9e6 Mon Sep 17 00:00:00 2001
 From: =?UTF-8?q?Marco=20Trevisan=20=28Trevi=C3=B1o=29?= <mail@3v1n0.net>
 Date: Wed, 27 Mar 2019 05:42:41 +0100
 Subject: [PATCH 19/22] display: Support UI scaled logical monitor mode
