@@ -1,4 +1,4 @@
-From 5719204abe5bca7b93bba522f0cdb1c77946704f Mon Sep 17 00:00:00 2001
+From 7cf1d43e1d7c4ccae960df87d27a0364439cea45 Mon Sep 17 00:00:00 2001
 From: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 Date: Thu, 30 Jan 2020 10:16:06 +1300
 Subject: [PATCH 20/22] Disable non working camera/microphones panels
