@@ -1,4 +1,4 @@
-From b5d920f84672b0c49a8fd625c9b64eeacc0dcd70 Mon Sep 17 00:00:00 2001
+From 0423e2c0d3ee98795e46e1935df77b60cb8d42a1 Mon Sep 17 00:00:00 2001
 From: Robert Ancell <robert.ancell@canonical.com>
 Date: Mon, 3 Feb 2020 14:06:45 +1300
 Subject: [PATCH 21/22] Revert "build: Bump build-dependency on polkit"
