@@ -1,4 +1,4 @@
-From 01cf38590063730b7a182e4501568a27de164204 Mon Sep 17 00:00:00 2001
+From 013188840700fedd00b84fd5d213edec9bec8117 Mon Sep 17 00:00:00 2001
 From: Robert Ancell <robert.ancell@canonical.com>
 Date: Mon, 3 Feb 2020 14:23:34 +1300
 Subject: [PATCH 22/22] info-overview: Show updates in software propeties
