@@ -1,6 +1,8 @@
 gnome-control-center (1:3.36.0-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * debian/patches/0008-Allow-tweaking-some-settings-for-Ubuntu-Dock.patch:
+    - Fix crash when theme changed to unknown value (LP: #1866246)
 
  -- Robert Ancell <robert.ancell@canonical.com>  Tue, 10 Mar 2020 11:53:02 +1300
 
